# solana-universal-indexer

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx.toml
.sqlx/: query-0efc8bc1ae0eeda9f7cb66292f0f802db2e497fc3b02f96f3c7f87174a74bbe0.json  query-271dc07d22038274dfb270a0e3c8cd112d3dae65124c4e71ba130ed8c6423d59.json  query-29b71f230458cd0f9dd6c6025c63b0dae11b5e79528fd6104ca7ab02162dc89a.json  query-2ece9aeddf0c39986ccfe0efe332d00ad51dc544193db3e165747e3cccbf1e6c.json  query-3cdc26024d6dd5e0ededd52d5c7100a086c6ad683bada0f97d203d04805cb2d5.json  query-48185b3cf203d4dfdfb1a682cb2aed83165aa412743f59c6bf9eb9fd7cfe9950.json  query-6a55441adf4ef92a90c418f301db60893ad851898888a8defca0b178d66d8589.json  query-70b5ae65942e38c5b2f40edd088fd0425bb1178a9ce3f3463ff4c0a7e9e4932a.json  query-84bfa65ec4c46f427fb836c2efa7276c59fe1e1a3de97a90cb45cb314f595c01.json  query-84e78465b75eb194f0b335cf3967612d7ba137ae3fd43028c9adcdaacfbd502d.json  query-99c86763aeb0583ee5e60110c4552eba9bf3bde713bc6dfa0728cb11c52a374c.json  query-a11ae9856c0bf8204495c1795a012f0c7a4cf8dc594c1a434891a1ba26728025.json  query-c39c08899110387ac1500385531494d561737de8c929a4d1f37e41aa2bcdfcba.json  query-d6d538d49e79844c2a07e5cef3502b0a497f47ef043849004e0b3d6a051f7ffb.json  query-ea842bfbdf8d445f23d1a292e410e433e66e341fcdce4ff3a91defe1bc842ae1.json  query-f8cb2be1dac0b3a4c8d0b587a61f51d5ad33d323bb86fd0acf072d5d40876aac.json
migrations/: 001_init.sql
src/: config.rs  lib.rs  main.rs
src/api/: handlers.rs  router.rs  state.rs
src/db/: mod.rs  (+1 more)
tests/: decoder_tests.rs
(+8 files in other folders)
